@@ -7,7 +7,7 @@
 [![Maven Central](https://img.shields.io/maven-central/v/com.github.psi-probe/psi-probe-web)](https://maven-badges.herokuapp.com/maven-central/com.github.psi-probe/psi-probe-web)
 [![Sonatype Nexus (Snapshots)](https://img.shields.io/nexus/s/https/oss.sonatype.org/com.github.psi-probe/psi-probe-web.svg)](https://oss.sonatype.org/content/repositories/snapshots/org/psi-probe/psi-probe-web/)
 [![Renovate enabled](https://img.shields.io/badge/renovate-enabled-brightgreen.svg)](https://renovatebot.com/)
-[![Releases](https://img.shields.io/github/downloads/psi-probe/psi-probe/psi-probe-5.2.0/total)](https://github.com/psi-probe/psi-probe/releases/download/psi-probe-5.2.0/probe.war)
+[![Releases](https://img.shields.io/github/downloads/psi-probe/psi-probe/psi-probe-5.2.1/total)](https://github.com/psi-probe/psi-probe/releases/download/psi-probe-5.2.1/probe.war)
 [![GPLv2 License](https://img.shields.io/badge/license-GPLv2-green.svg)](https://www.gnu.org/licenses/old-licenses/gpl-2.0.html)
 [![Project Stats](https://www.openhub.net/p/psi-probe/widgets/project_thin_badge.gif)](https://www.openhub.net/p/psi-probe)
 [![Github All Releases](https://img.shields.io/github/downloads/psi-probe/psi-probe/total.svg)]()
@@ -25,7 +25,7 @@ See [CONTRIBUTING.md](CONTRIBUTING.md) for info on working on PSI Probe and send
 
 ## Latest Release via Github Releases ##
 
-Please download latest probe.war from [here](https://github.com/psi-probe/psi-probe/releases/download/psi-probe-5.2.0/probe.war)
+Please download latest probe.war from [here](https://github.com/psi-probe/psi-probe/releases/download/psi-probe-5.2.1/probe.war)
 
 ## Latest Release via Maven Central ##
 
@@ -72,6 +72,7 @@ Generally supported versions for third party tomcat providers align with their s
 * Tomcat 9.0 Series
 
     - Requires java 11 or better
+    - Use psi probe 4.x series for javax namespace
     - Spring is no longer receiving updates so vulnerabilities with spring will not be addressed.  If you have a subscription to spring, manually patch the jars.
     - Tomcat 9.0.72 to 9.0.105
     - TomEE 8.0.16 (Based on Tomcat 9.0.82).  TomEE 8.0 ended support on December 31st 2023
@@ -82,6 +83,7 @@ Generally supported versions for third party tomcat providers align with their s
 * Tomcat 10.1 Series
 
     - Requires java 17 or better
+    - Use psi probe 5.x series for jakarta namespace
     - Tomcat 10.1.6 to 10.1.41
     - TomEE 10.0.0 to 10.0.1 (Based on Tomcat 10.1.39).
     - NonStop(tm) Servlets For JavaServer Pages(tm) v10.1 (Based on Tomcat 10.1.7)
@@ -90,6 +92,7 @@ Generally supported versions for third party tomcat providers align with their s
 * Tomcat 11.0 Series
 
     - Requires java 17 or better
+    - Use psi probe 5.x series for jakarta namespace
     - Tomcat 11.0.0.M3 to 11.0.7
     - TomEE - no support yet for tomcat 11.0
     - NonStop(tm) Servlets For JavaServer Pages(tm) - no support yet for tomcat 11.0
@@ -100,12 +103,13 @@ Generally supported versions for third party tomcat providers align with their s
 PSI Probe uses deep reflection to access data. Take care your tomcat configuration considers this.
 You can do this by extending the JDK_JAVA_OPTIONS variable:
 
-
         ...
         --add-opens=java.base/java.lang=ALL-UNNAMED \
+        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
         --add-opens=java.base/java.io=ALL-UNNAMED \
         --add-opens=java.base/java.util=ALL-UNNAMED \
         --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
+        --add-opens=java.base/sun.util.locale=ALL-UNNAMED \
         --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED \
         ...
 
